# spherediff

./: generate_static_wallpaper.py  pyproject.toml
data/prompts/: bastille_grid.txt  egypt_grid.txt  new_grid.txt
pipelines_ours/: __init__.py  pipe_fluxgrid.py  spherical_functions.py
scripts/: run.sh
