[project]
name="spherediff"
version="0.0.1"
requires-python=">=3.11.9"

[tool.autopep8]
max_line_length = 200
ignore = ["E402", "E731"]

[tool.uv.sources]
tools-mpark = { git = "https://github.com/pmh9960/tools_mpark" }

[dependency-groups]
dev = [
    "accelerate==1.4.0",
    "diffusers==0.32.2",
    "einops==0.8.1",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "omegaconf==2.3.0",
    "protobuf==5.29.3",
    "sentencepiece==0.2.0",
    "tools-mpark",
    "transformers==4.49.0",
]
